tests/reference/asr-float1-817e0db.stderr
semantic error: Argument of intrinsic must be an integer
 --> tests/errors/float1.f90:3:10
  |
3 | print *, float(y)
  |          ^^^^^^^^ 
